# FileSystem

./: .gitmodules  CMakeLists.txt  main.cpp
disk/: CMakeLists.txt
disk/include/Disk/: dir.hpp  directoryInfo.hpp  disk.hpp  fileControlBlock.hpp  fileInfo.hpp  indexNode.hpp  indirectFlag.hpp
disk/src/: dir.cpp  directoryInfo.cpp  disk.cpp  fileControlBlock.cpp  fileInfo.cpp  indexNode'.cpp
user/: CMakeLists.txt
user/include/User/: user.hpp
user/src/: user.cpp
